Prevent UConnBanner from stretching

--- a/packages/travelfunds-front/src/components/UConnBanner/styles.scss
+++ b/packages/travelfunds-front/src/components/UConnBanner/styles.scss
@@ -22,7 +22,7 @@ $common-default-font-size: 16px;
 
     display: flex;
     align-items: center;
-    flex: 1 0 auto;
+    flex: 0 0 auto;
 
     color: $white;
 }
